--- a/View/Style/LoginResgister.css
+++ b/View/Style/LoginResgister.css
@@ -1,11 +1,4 @@
-﻿.Text {
-    color: white
+﻿.Login-Card{
+    color:white;
 }
 
-.Label {
-    color: gray
-}
-
-.Button {
-    color: lightblue
-}
