--- a/View/Style/Style.css
+++ b/View/Style/Style.css
@@ -1,8 +1,21 @@
 ﻿body {
-    background-color:black
+    margin:0px, 0px;
+    padding:0px, 0px;
+    background: rgb(43,53,101);
+    background: linear-gradient(90deg, rgba(43,53,101,1) 0%, rgba(164,70,252,1) 100%);
 }
 
 h2{
     color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.Login-Card {
+    color:dimgray;
+}
+
+.Center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
